# saparid

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
cmake/: Project.cmake
doc/: config.md  project_structure.md  uaid_generation.md
doc/packet_captures/: sapari-simple.pcapng
doc/packet_captures/new/: sapari_more.pcapng  sapari_rename.pcapng  sapari_simple_connection.pcapng  sapari_switch_model.pcapng
include/saparid/common/: Asio.hpp  ByteSwap.hpp  CommonTypes.hpp  FixedString.hpp  SpanBuffer.hpp
include/saparid/meta/: meta.hpp
include/saparid/meta/detail/: BufferHelpers.hpp  MemberToString.hpp  Object.hpp  ReadMemberImpl.hpp  ReadWriteMember.hpp  Schema.hpp  Tags.hpp  WriteMemberImpl.hpp
include/saparid/proto/: Message.hpp  WireTypes.hpp
include/saparid/world/: WorldAura.hpp  WorldObject.hpp
src/common/: AsioImpl.cpp  CMakeLists.txt
src/saparid/: CMakeLists.txt  main.cpp
tools/wireshark/: sapari.lua
